Modify redirect and title in index.html
Updated the redirect mechanism and title in index.html.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Lieblingsschmerz</title>
-<!-- سریع redirect به فایل اصلی -->
-<script>location.replace('./Lieblingsschmerz.html');</script>
-<noscript>
-  <p>Wenn Ihr Browser kein JavaScript hat, klicken Sie bitte: <a href="./Lieblingsschmerz.html">Hier öffnen</a></p>
-</noscript>
+<title>Loading…</title>
+<meta http-equiv="refresh" content="0; url=Lieblingsschmerz.html">
+<script>
+  // فallback سریع برای بعضی مرورگرها
+  location.replace('Lieblingsschmerz.html');
+</script>
+<p>
+  Redirecting… If not redirected,
+  <a href="Lieblingsschmerz.html">click here</a>.
+</p>
+
