--- a/Lieblingsschmerz.html
+++ b/Lieblingsschmerz.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-
 <title>💌Mein Lieblingsschmerz💌</title>
 <style>
   :root{
@@ -25,17 +24,18 @@
     --print-zoom: 1;
   }
 
+  *{box-sizing:border-box}
   html,body{height:100%;margin:0}
   body{
     font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Tahoma,sans-serif;
     color:var(--ink);
     display:flex;align-items:center;justify-content:center;
-    /* پدینگ پایینی را با safe-area + فاصلهٔ اضافه جمع می‌کنیم */
     padding:28px;
     padding-top:    max(28px, env(safe-area-inset-top));
     padding-right:  max(28px, env(safe-area-inset-right));
     padding-bottom: calc(max(28px, env(safe-area-inset-bottom)) + var(--floor-gap));
     padding-left:   max(28px, env(safe-area-inset-left));
+    -webkit-tap-highlight-color: transparent;
 
     /* Romantic Rosé + Champagne layered background */
     background:
@@ -47,6 +47,7 @@
       #fffaf6;
     background-attachment: fixed, fixed, fixed, fixed, fixed, fixed;
     position:relative; overflow-x:hidden;
+    text-rendering: optimizeLegibility;
   }
 
   .stage{position:relative; width:min(760px,96vw);}
@@ -103,13 +104,7 @@
     background: radial-gradient(circle at 30% 25%, rgba(255,255,255,.5) 0, transparent 45%);
     filter: blur(2px); pointer-events:none;
   }
-  @keyframes wiggle{
-    0%  { transform:translate(-50%,-50%) rotate(0deg); }
-    25% { transform:translate(-50%,-50%) rotate(-6deg); }
-    50% { transform:translate(-50%,-50%) rotate(6deg); }
-    75% { transform:translate(-50%,-50%) rotate(-3deg); }
-    100%{ transform:translate(-50%,-50%) rotate(0deg); }
-  }
+  @keyframes wiggle{ 0%{transform:translate(-50%,-50%) rotate(0)}25%{transform:translate(-50%,-50%) rotate(-6deg)}50%{transform:translate(-50%,-50%) rotate(6deg)}75%{transform:translate(-50%,-50%) rotate(-3deg)}100%{transform:translate(-50%,-50%) rotate(0)} }
   .seal.wiggle{ animation: wiggle .35s ease; }
 
   /* Öffnen button + ripple */
@@ -120,6 +115,7 @@
     box-shadow:0 14px 24px rgba(255,75,110,.35), 0 2px 0 rgba(160,20,50,.25) inset;
     transition: transform .12s ease, box-shadow .12s ease;
     position:relative; overflow:hidden;
+    touch-action: manipulation;
   }
   .open-btn:active{ transform:translateY(1px) }
   .open-btn::after{
@@ -140,33 +136,23 @@
       transparent 70%);
     animation: rippleOut .6s ease-out forwards;
   }
-  @keyframes rippleOut{
-    from{ width:0;height:0; opacity:.35 }
-    to  { width:220px;height:220px; opacity:0 }
-  }
+  @keyframes rippleOut{ from{ width:0;height:0; opacity:.35 } to{ width:220px;height:220px; opacity:0 } }
 
   .opened .flap{ transform: rotateX(-185deg); }
   .opened .open-wrap{display:none}
 
   /* Origami short line */
-  .origami-line{
-    position:absolute; top:64px; right:26px; width:120px; height:22px; pointer-events:none; opacity:.8;
-  }
+  .origami-line{ position:absolute; top:64px; right:26px; width:120px; height:22px; pointer-events:none; opacity:.8; }
   .origami-line svg path{ stroke: rgba(247,213,143,.85); }
 
   /* Post stamp cancellation (gold waves) */
-  .stamp-cancel{
-    position:absolute; top:24px; left:62px; width:160px; height:70px; transform: rotate(-16deg);
-    pointer-events:none; opacity:.66;
-  }
+  .stamp-cancel{ position:absolute; top:24px; left:62px; width:160px; height:70px; transform: rotate(-16deg); pointer-events:none; opacity:.66; }
   .stamp-cancel svg path{ stroke: rgba(245,198,106,.55); }
 
   /* Card */
   .card{
     position:relative; margin-top:36px; background:var(--paper); border-radius:22px;
     border:1px solid #ffe5d4; overflow:hidden; display:none; box-shadow:var(--shadow);
-
-    /* فاصلهٔ اضافه تا کف صفحه (برای دیده‌شدن کامل قاب طلایی پایین) */
     margin-bottom: calc(var(--floor-gap) * .6);
   }
   .card.show{display:block; animation:pop .7s ease}
@@ -199,35 +185,24 @@
     padding:8px 18px; border-radius:12px;
     border:1px solid #ffd6e3; box-shadow:0 1px 0 rgba(255,255,255,.6) inset;
   }
-  .chip.ribbon::before,
-  .chip.ribbon::after{
+  .chip.ribbon::before,.chip.ribbon::after{
     content:""; position:absolute; top:50%; width:16px; height:16px;
     background:#ffeaf2; border:1px solid #ffd6e3;
     box-shadow:0 0 0 1px rgba(255,255,255,.7) inset;
     transform:translateY(-50%) rotate(45deg);
   }
-  .chip.ribbon::before{ left:-10px; }
-  .chip.ribbon::after{  right:-10px; }
+  .chip.ribbon::before{ left:-10px; } .chip.ribbon::after{ right:-10px; }
 
-  .card-body{ padding:24px; line-height:1.95; position:relative }
-  .card-body::after{
-    content:""; position:absolute; inset:0; border-radius:18px; pointer-events:none;
-    box-shadow: inset 0 0 80px rgba(255, 206, 216, .20);
-  }
+  .card-body{ padding:24px; line-height:1.95; position:relative; overflow-wrap: anywhere; }
+  .card-body::after{ content:""; position:absolute; inset:0; border-radius:18px; pointer-events:none; box-shadow: inset 0 0 80px rgba(255, 206, 216, .20); }
 
   /* Subtle golden corner florals */
-  .gilded-corner{
-    position:absolute; width:100px; height:100px; pointer-events:none; opacity:.18; filter: blur(.2px);
-  }
-  .gilded-corner svg path,
-  .gilded-corner svg circle{
-    stroke: rgba(247,213,143,.8);
-    fill: rgba(247,213,143,.18);
-  }
+  .gilded-corner{ position:absolute; width:100px; height:100px; pointer-events:none; opacity:.18; filter: blur(.2px); }
+  .gilded-corner svg path, .gilded-corner svg circle{ stroke: rgba(247,213,143,.8); fill: rgba(247,213,143,.18); }
   .gilded-corner.tl{ top:10px; left:10px; transform: rotate(0deg); }
   .gilded-corner.br{ bottom:10px; right:10px; transform: rotate(180deg); }
 
-  h1{font-size:26px; margin:0 0 6px}
+  h1{font-size:26px; margin:0 0 6px; text-wrap:balance}
   .subline{ font-size:14px; opacity:.85; margin:-2px 0 10px; font-style:italic; direction: rtl; }
 
   .gold{
@@ -237,11 +212,7 @@
   .gold.glint{ background-size:200% auto; animation:goldglint 9.2s linear infinite; }
   @keyframes goldglint{ 0%{background-position:-60% 0} 45%{background-position:160% 0} 100%{background-position:160% 0} }
 
-  .gold.neon{
-    -webkit-text-stroke: 1px rgba(247,213,143,.85);
-    text-shadow:0 0 3px rgba(247,213,143,.45), 0 0 8px rgba(245,198,106,.30), 0 0 16px rgba(249,230,182,.25);
-    filter: drop-shadow(0 0 6px rgba(247,213,143,.22));
-  }
+  .gold.neon{ -webkit-text-stroke: 1px rgba(247,213,143,.85); text-shadow:0 0 3px rgba(247,213,143,.45), 0 0 8px rgba(245,198,106,.30), 0 0 16px rgba(249,230,182,.25); filter: drop-shadow(0 0 6px rgba(247,213,143,.22)); }
   .gold.neon.breathe{ animation: neon-outline-breathe 2.8s ease-in-out infinite; }
 
   #letter .neon-word{
@@ -253,10 +224,8 @@
   }
   #letter .neon-word.breathe{ animation: neon-outline-breathe 2.4s ease-in-out infinite; }
   @keyframes neon-outline-breathe{
-    0%,100%{ text-shadow: 0 0 3px rgba(247,213,143,.45), 0 0 8px rgba(245,198,106,.30), 0 0 16px rgba(249,230,182,.25);
-             filter: drop-shadow(0 0 6px rgba(247,213,143,.22)); }
-    50%   { text-shadow: 0 0 4px rgba(247,213,143,.60), 0 0 10px rgba(245,198,106,.42), 0 0 20px rgba(249,230,182,.35);
-             filter: drop-shadow(0 0 8px rgba(247,213,143,.30)); }
+    0%,100%{ text-shadow: 0 0 3px rgba(247,213,143,.45), 0 0 8px rgba(245,198,106,.30), 0 0 16px rgba(249,230,182,.25); filter: drop-shadow(0 0 6px rgba(247,213,143,.22)); }
+    50%   { text-shadow: 0 0 4px rgba(247,213,143,.60), 0 0 10px rgba(245,198,106,.42), 0 0 20px rgba(249,230,182,.35); filter: drop-shadow(0 0 8px rgba(247,213,143,.30)); }
   }
 
   .muted{opacity:.82; font-size:14px}
@@ -308,18 +277,14 @@
   .q-progress.run .bar{ animation: qbar var(--qdur, 6s) linear forwards; }
   @keyframes qbar{ from{width:0%} to{width:100%} }
 
-  .pulse-heart{
-    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%) scale(.6);
-    font-size:22px; pointer-events:none; animation:pulseOut .4s ease forwards;
-  }
+  .pulse-heart{ position:absolute; left:50%; top:50%; transform:translate(-50%,-50%) scale(.6); font-size:22px; pointer-events:none; animation:pulseOut .4s ease forwards; }
   @keyframes pulseOut{ to{ transform:translate(-50%,-50%) scale(1.6); opacity:0 } }
 
   .actions{
     display:flex; gap:10px; align-items:center; justify-content:center;
     flex-wrap:wrap; margin:12px 0 6px;
   }
-  .btn{ border:0; border-radius:12px; padding:10px 14px; cursor:pointer; font-weight:800; background:#f6f6f6;
-        transition: box-shadow .15s ease, transform .08s ease; }
+  .btn{ border:0; border-radius:12px; padding:10px 14px; cursor:pointer; font-weight:800; background:#f6f6f6; transition: box-shadow .15s ease, transform .08s ease; touch-action: manipulation; }
   .btn:hover{ box-shadow:0 10px 22px rgba(255,75,110,.28), 0 0 0 1px rgba(255,255,255,.6) inset; }
   .btn:active{ transform: translateY(1px); }
   .btn.primary{ background: var(--rose); color:#fff}
@@ -341,10 +306,7 @@
     box-shadow:0 2px 6px rgba(255,75,110,.35);
   }
 
-  .music-visual{
-    width:100%; display:flex; align-items:center; justify-content:center;
-    gap:8px; margin-top:6px; opacity:.9; flex-wrap:wrap;
-  }
+  .music-visual{ width:100%; display:flex; align-items:center; justify-content:center; gap:8px; margin-top:6px; opacity:.9; flex-wrap:wrap; }
   .music-visual .heart{ font-size:18px; width:22px; text-align:center; transform-origin:center; opacity:.75; }
   .music-visual.on .heart{ animation:mbeat 1.1s ease-in-out infinite; }
   .music-visual.on .heart:nth-child(3n+1){ animation-delay:0s }
@@ -355,6 +317,43 @@
   .ps-toggle{ margin-top:10px; background:#fff1f7; }
   .ps{ margin-top:8px; font-style:italic; opacity:.88; display:none; }
   .ps.show{ display:block; }
+
+  @media (prefers-reduced-motion: reduce){
+    .open-btn::after{animation:none}
+    .open-btn, .card.show, .fade,
+    .music-visual .heart,
+    .gold.glint, .gold.neon.breathe,
+    #letter .neon-word.breathe,
+    .seal.wiggle, .ripple, .q-progress .bar { animation-duration:.01ms !important; animation-iteration-count:1 !important; }
+  }
+
+  /* ====== واکنش‌گرا (گوشی‌های کوچک) ====== */
+  @media (max-width: 390px){
+    .stage{ width: min(720px, 94vw); }
+    .envelope{ height:300px; }
+    .env-label{ padding:8px 12px; font-size:13px; }
+    .open-btn{ padding:11px 18px; border-radius:14px; }
+    .gilded-corner{ width:76px; height:76px; }
+    .card-body{ padding:18px; }
+    h1{ font-size:22px; }
+    .letter{ font-size:16px; line-height:1.85; }
+    .q-box{ font-size:18px; line-height:1.7; }
+    :root{ --floor-gap: clamp(48px, 7vh, 120px); }
+  }
+
+  /* ====== ارتفاع‌های کوتاه (landscape موبایل/کوچک) ====== */
+  @media (max-height: 600px){
+    .envelope{ height:260px; }
+    :root{ --floor-gap: clamp(36px, 6vh, 80px); }
+    .card{ margin-bottom: calc(var(--floor-gap) * .4); }
+  }
+
+  /* ====== تبلت‌ها ====== */
+  @media (min-width: 768px) and (max-width: 1024px){
+    .stage{ width:min(820px, 92vw); }
+    .card-body{ padding:22px; }
+    .q-box{ font-size:19px; }
+  }
 
   /* PRINT: یک صفحه A4 با زوم واقعی که روی چیدمان اثر می‌گذارد */
   @media print{
@@ -368,23 +367,16 @@
     /* فقط کارت در چیدمان بماند */
     body > *{ visibility:hidden !important; }
     .stage{ display:block !important; visibility:visible !important; }
-    .stage > :not(.card){ display:none !important; } /* پاک‌کردن envelope و ... از چیدمان */
+    .stage > :not(.card){ display:none !important; }
     .card, .card *{ visibility:visible !important; }
 
     .card{
       display:block !important; position:static !important;
-
-      /* عرض قبل از زوم؛ تا بعد از zoom دقیقاً به ناحیهٔ قابل‌چاپ بخورد */
       width: calc((210mm - 18mm - 14mm) / var(--print-zoom, 1)) !important;
-
-      margin:0 !important;
-      box-shadow:none !important; border:1px solid #eeeeee !important;
+      margin:0 !important; box-shadow:none !important; border:1px solid #eeeeee !important;
       break-inside: avoid !important; page-break-inside: avoid !important;
-
-      /* زوم واقعی (Chrome/Edge/Safari) */
       zoom: var(--print-zoom, 1) !important;
-      transform: none !important;
-      transform-origin: top left !important;
+      transform: none !important; transform-origin: top left !important;
     }
 
     .card::before, .card::after,
@@ -661,6 +653,7 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
   // Open → show card
   const typeWriterDelay = 500;
   const envEl = document.getElementById("envelope");
+  const openBtn = document.getElementById("openBtn");
   openBtn.addEventListener("click", async (ev)=>{
     const r = document.createElement('span');
     r.className = 'ripple';
@@ -675,6 +668,8 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
     envEl.classList.add("opened");
     setTimeout(async ()=>{
       card.classList.add("show");
+      /* اطمینان از دیده‌شدن کارت در موبایل */
+      setTimeout(()=>{ card.scrollIntoView({behavior:'smooth', block:'start'}); }, 50);
       typeWriter(letterText, letterEl);
       await tryPlay();
     }, typeWriterDelay);
@@ -701,20 +696,17 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
       const printableWpx = mmToPx(PAGE_W - LEFT - RIGHT);
       const printableHpx = mmToPx(PAGE_H - TOP - BOTTOM);
 
-      // کارت ممکن است در حالت عادی display:none باشد (قبل از باز کردن)
       const prevDisplay = getComputedStyle(card).display;
       const prevWidth = card.style.width;
 
-      // موقتاً برای اندازه‌گیری، نمایش و عرض را تنظیم می‌کنیم
       card.style.display = 'block';
       card.style.width = printableWpx + 'px';
 
-      const contentH = card.scrollHeight; // ارتفاع واقعی محتوا
+      const contentH = card.scrollHeight;
 
       const zoom = Math.min(1, printableHpx / contentH); // هرگز >1 بزرگ نکن
       document.documentElement.style.setProperty('--print-zoom', zoom.toFixed(3));
 
-      // بازگردانی حالت قبلی
       card.style.width = prevWidth;
       card.style.display = prevDisplay;
 
@@ -795,10 +787,6 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
     {text:"Wenn ich könnte, würde ich dein Lächeln aufnehmen und jedes Mal abspielen, wenn ich traurig bin.", author:""},
     {text:"Roya, du bist wie starkes WLAN – wenn du nicht da bist, fühlt sich die ganze Welt langsam und langweilig an.", author:""},
     {text:"„Jedes Mal, wenn du mir schreibst, fühlt es sich an, als würde eine Kugel voller Glück mich treffen.“", author:""},
-    {text:"", author:""},
-    {text:"", author:""},
-    {text:"", author:""},
-    {text:"", author:""},
     {text:"Ich liebe dich – nicht wie die anderen, sondern wie den ersten Herzschlag, der merkt, dass er lebt, nur weil es dich gibt.", author:""}
   ];
   let idx = 0, autoTimer = null;
